<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<!-- POM file generated with GWT webAppCreator -->
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.greenenergycorp</groupId>
	<artifactId>gwttemplate</artifactId>
	<packaging>war</packaging>
	<version>0.0.1-SNAPSHOT</version>
	<name>GWT Maven Archetype</name>
	<properties>
		<!-- Convenience property to set the GWT version -->
		<gwtVersion>2.4.0</gwtVersion>
		<!-- GWT needs at least java 1.5 -->
		<maven.compiler.source>1.6</maven.compiler.source>
		<maven.compiler.target>1.6</maven.compiler.target>
		<!-- Common Dependencies -->
		<reef.version>0.3.1</reef.version>
		<junit.version>4.10</junit.version>
		<org.springframework.version>3.0.5.RELEASE</org.springframework.version>
		<com.google.guice.version>3.0</com.google.guice.version>
		<com.google.gin.version>1.5.0</com.google.gin.version>
		<com.google.guava.version>r09</com.google.guava.version>
		<com.google.gwt.version>2.4.0</com.google.gwt.version>
		<com.gwtplatform.version>0.6</com.gwtplatform.version>
		<!-- plugins -->
		<org.eclipse.jetty.version>7.2.2.v20101205</org.eclipse.jetty.version>
		<sonar.plugin.version>2.0-beta-2</sonar.plugin.version>
		<release.plugin.version>2.0-beta-9</release.plugin.version>
		<java.formatter.plugin.version>0.3.1</java.formatter.plugin.version>
		<license.plugin.version>1.9.0</license.plugin.version>
		<resources.plugin.version>2.4</resources.plugin.version>
		<compiler.plugin.version>2.0.2</compiler.plugin.version>
		<source.plugin.version>2.1.2</source.plugin.version>
		<javadoc.plugin.version>2.7</javadoc.plugin.version>
		<surefire.plugin.version>2.7.1</surefire.plugin.version>
		<build-helper-maven-plugin.version>1.7</build-helper-maven-plugin.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-user</artifactId>
			<version>${gwtVersion}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.google.code.findbugs</groupId>
			<!-- provides for the Nullable Annotation -->
			<artifactId>jsr305</artifactId>
			<version>1.3.9</version>
		</dependency>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-servlet</artifactId>
			<version>${gwtVersion}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>r07</version>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava-gwt</artifactId>
			<version>r07</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.gwtplatform</groupId>
			<artifactId>gwtp-processors</artifactId>
			<version>${com.gwtplatform.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.gwtplatform</groupId>
			<artifactId>gwtp-dispatch-client</artifactId>
			<version>${com.gwtplatform.version}</version>
		</dependency>
		<dependency>
			<groupId>com.gwtplatform</groupId>
			<artifactId>gwtp-dispatch-server-guice</artifactId>
			<version>${com.gwtplatform.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.inject</groupId>
			<artifactId>guice</artifactId>
			<version>${com.google.guice.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.inject.extensions</groupId>
			<artifactId>guice-servlet</artifactId>
			<version>${com.google.guice.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.inject.extensions</groupId>
			<artifactId>guice-assistedinject</artifactId>
			<version>${com.google.guice.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.gwt.inject</groupId>
			<artifactId>gin</artifactId>
			<version>${com.google.gin.version}</version>
		</dependency>
	</dependencies>
	<profiles>
		<profile>
			<activation>
				<os>
					<arch>x86_64</arch>
				</os>
			</activation>
			<properties>
				<!-- Run the gwt-maven-plugin in a 32-bit partition. -->
				<gwt.extraJvmArgs>-d32</gwt.extraJvmArgs>
			</properties>
		</profile>
		<profile>
			<!-- Activate only when within eclipse -->
			<id>m2eclipse</id>
			<activation>
				<property>
					<name>!m2e.version</name>
				</property>
			</activation>

			<!-- GWT SDK is provided by GWT SDK Classpath Container -->
			<dependencies>
				<dependency>
					<groupId>com.google.gwt</groupId>
					<artifactId>gwt-servlet</artifactId>
					<version>${gwtVersion}</version>
					<scope>runtime</scope>
				</dependency>
				<dependency>
					<groupId>com.google.gwt</groupId>
					<artifactId>gwt-user</artifactId>
					<version>${gwtVersion}</version>
					<scope>provided</scope>
				</dependency>
			</dependencies>
		</profile>
	</profiles>

	<build>
		<!-- Generate compiled stuff in the folder used for developing mode -->
		<outputDirectory>${project.basedir}/war/WEB-INF/classes</outputDirectory>
		<testOutputDirectory>${project.build.directory}/test-classes</testOutputDirectory>

		<!-- Ensure all HTML, CSS etc. make it into the gwt war file. -->
		<resources>
			<resource>
				<directory>${project.basedir}/src/main/resources</directory>
				<targetPath>${project.basedir}/war/</targetPath>
				<includes>
					<include>**/*</include>
				</includes>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>2.4.1</version>
				<configuration>
					<filesets>
						<fileset>
							<!-- war contains build files - remove it the mvn clean goal -->
							<directory>war</directory>
						</fileset>
					</filesets>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>${resources.plugin.version}</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<overwrite>true</overwrite>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>gwt-maven-plugin</artifactId>
				<version>2.4.0</version>
				<!-- We list these deps explicitly so that we can use a version of gwt newer than the plugin if necessary. Using the version property keeps all gwt versions in sync. -->
				<dependencies>
					<dependency>
						<groupId>com.google.gwt</groupId>
						<artifactId>gwt-user</artifactId>
						<version>${com.google.gwt.version}</version>
					</dependency>
					<dependency>
						<groupId>com.google.gwt</groupId>
						<artifactId>gwt-dev</artifactId>
						<version>${com.google.gwt.version}</version>
					</dependency>
				</dependencies>

				<configuration>
					<!-- Permutation computation is very memory intensive, this ensures we won't run out -->
					<extraJvmArgs>-Xms256M -Xmx512M -Xss1024k -XX:PermSize=128m -XX:MaxPermSize=256m</extraJvmArgs>
					<!-- Tell GWT where it can find your application and associated config files -->
					<webappDirectory>war</webappDirectory>
					<hostedWebapp>war</hostedWebapp>
					<webXml>src/main/webapp/WEB-INF/web.xml</webXml>
					<runTarget>gwttemplate.html</runTarget>
					<style>DETAILED</style>
				</configuration>

				<executions>
					<execution>
						<goals>
							<goal>compile</goal>
							<goal>test</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.1</version>
				<configuration>
					<warSourceDirectory>src/main/webapp</warSourceDirectory>
					<webappDirectory>war</webappDirectory>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${surefire.plugin.version}</version>
			</plugin>

			<plugin>
				<groupId>org.mortbay.jetty</groupId>
				<artifactId>jetty-maven-plugin</artifactId>
				<version>${org.eclipse.jetty.version}</version>
				<configuration>

					<webApp>${basedir}/target/gwttemplate-0.0.1-SNAPSHOT.war</webApp>
					<stopPort>9966</stopPort>
					<stopKey>gwttemplate</stopKey>
					<connectors>
						<connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
							<port>8990</port>
							<maxIdleTime>6000000</maxIdleTime>
						</connector>
					</connectors>

					<systemProperties implementation="org.mortbay.jetty.plugin.SystemProperties">
						<systemProperty implementation="org.mortbay.jetty.plugin.SystemProperty">
							<name>gwttemplate.home.logs</name>
							<value>.</value>
						</systemProperty>
					</systemProperties>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.0.2</version>
			</plugin>
		</plugins>
	</build>

	<repositories>
	</repositories>
</project>
